--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.5.3",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17"
   }
 }
