--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.4.1",
+    "@types/react-table": "^7.7.20",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.0"
+    "react-router-dom": "^6.26.0",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
